#7826 - Navigation and mega menu - Added position static for dropdown to prevent dropdowns from being hidden due to overflow hidden in row with no container

--- a/Swift/Files/Templates/Designs/Swift/Assets/_src/scss/2-components/_megamenu.scss
+++ b/Swift/Files/Templates/Designs/Swift/Assets/_src/scss/2-components/_megamenu.scss
@@ -1,7 +1,11 @@
 .megamenu-wrapper {
 
 	.dropdown {
-
+		
+		&:hover {
+			position: static;
+		}
+		
 		.dropdown-toggle:hover {
 			position: relative;
 
