--- a/Swift/Files/Templates/Designs/Swift/Assets/_src/scss/2-components/_nav.scss
+++ b/Swift/Files/Templates/Designs/Swift/Assets/_src/scss/2-components/_nav.scss
@@ -8,6 +8,10 @@
 	}
 
 	.dropdown {
+		
+		&:hover {
+			position: static;
+		}
 
 		.dropdown-menu:empty {
 			padding: 0;
